--- a/hobbie01.html
+++ b/hobbie01.html
@@ -6,21 +6,32 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Hobbie Free Fire</title>
 </head>
-<body>
+<body class="body1f">
+
+
     <div style="text-align: center;">
-    <H1>Free Fire</H1>
+    <H1 class="h1f">Free F<span style="color: yellow;">i</span>re</H1>
 </div>
-<hr>
-    <div style="text-align: center;">
-    <video class="video1" controls width="600px" height="300px" src="image/video.hobbie.mp4"></video>
+
+    <a class="a1f" href="hobbie02.html">Hobbie2</a><br><br><br><br>
+    <a class="a2f" href="hobbie03.html">Hobbie3</a>
+
+    <div style="text-align: right;">
+    <video class="video1f" controls src="image/video.hobbie.mp4"></video>
     </div>
 
-    <p class="p1">
+    <p class="p1f">
         Tenho free fire como um hobbie de passatempo, é algo que consigo jogar somente nas horas vagas do meu dia a dia. <br>
         Gosto de jogar com meus amigos tambem, para ter um entretenimento e uma zoeira a mais.
     </p>
-    <div style="text-align: center;">
-    <img width="600px" height="300px" src="image/img_ff.jpg" alt="lobby ff">
+    <p class="p2f">
+        Quando eu era mais novo queria ser jogador profissional de jogos FPS, mas na época não tinha um celular muito bom, então com o passar do tempo fui perdendo a vontade, hoje em dia jogo mais por diversão.
+    </p>
+
+    <div style="text-align: left">
+    <img class="img1f" width="600px" height="300px" src="image/img_ff.jpg" alt="lobby ff">
     </div>
+
+
 </body>
 </html>
