--- a/hobbie02.html
+++ b/hobbie02.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Hobbie Basquete</title>
 </head>
-<body>
-    
+<body class="body2b">
+   
+    <div style="text-align: center;">
+    <h1 class="h1b">Basquete</h1>
+    </div>
+<div class="pb">
+    <p>
+        O basquete já foi um dos meus maiores passatempo, a dois anos atrás foi quando começei a jogar basquete com meu tio(Junior) e meu primo(Felipe). <br>
+        Jogavamos por diversão no começo, mas depois de um tempo pegando mais gosto pelo o esporte basquete, decidimos começar a treinar com o time de mongaguá.
+    </p>
+</div>
+
+
+
+
+    <!-- <img  width="300px" height="300px" src="image/img_basca1.jpg" alt=""> -->
+    <!-- <img  width="300px" height="300px" src="image/img_basca2.jpg" alt=""> -->
 </body>
 </html>
