--- a/hobbie01.html
+++ b/hobbie01.html
@@ -20,6 +20,7 @@
     <video class="video1f" controls src="image/video.hobbie.mp4"></video>
     </div>
 
+
     <p class="p1f">
         Tenho free fire como um hobbie de passatempo, é algo que consigo jogar somente nas horas vagas do meu dia a dia. <br>
         Gosto de jogar com meus amigos tambem, para ter um entretenimento e uma zoeira a mais.
@@ -30,6 +31,10 @@
 
     <div style="text-align: left">
     <img class="img1f" width="600px" height="300px" src="image/img_ff.jpg" alt="lobby ff">
+    </div>
+
+    <div style="text-align: center;">
+        <video controls class="video2f" src="image/video.hobbie2.mp4"></video>
     </div>
 
 
