--- a/hobbie01.html
+++ b/hobbie01.html
@@ -13,8 +13,8 @@
     <H1 class="h1f">Free F<span style="color: yellow;">i</span>re</H1>
 </div>
 
-    <a class="a1f" href="hobbie02.html">Hobbie2</a><br><br><br><br>
-    <a class="a2f" href="hobbie03.html">Hobbie3</a>
+    <a class="a1f" href="hobbie02.html">Basquete</a><br><br><br><br>
+    <a class="a2f" href="hobbie03.html">Academia</a>
 
     <div style="text-align: right;">
     <video class="video1f" controls src="image/video.hobbie.mp4"></video>
