--- a/hobbie02.html
+++ b/hobbie02.html
@@ -7,10 +7,15 @@
     <title>Hobbie Basquete</title>
 </head>
 <body class="body2b">
+
+ 
    
     <div style="text-align: center;">
     <h1 class="h1b">Basquete</h1>
     </div>
+    <a class="a1f" href="hobbie01.html">Free Fire</a><br><br><br><br>
+    <a class="a2f" href="hobbie03.html">Academia</a>
+
 <div class="pb">
     <p>
         O basquete já foi um dos meus maiores passatempo, a dois anos atrás foi quando começei a jogar basquete com meu tio(Junior) e meu primo(Felipe). <br>
@@ -18,10 +23,20 @@
     </p>
 </div>
 
+<div class="pb2">
+    <p>
+        Mas hoje em dia não tenho mais tempo para jogar, por questões pessoais (Trabalho, estudo e entre outros)
+    </p>
+
+</div>
+<div class="img2">
+    <img  width="300px" height="300px" src="image/img_basca1.jpg" alt="">
+</div>
+    <div class="img1">
+    <img  width="300px" height="300px" src="image/img_basca2.jpg" alt="">
+</div>
 
 
 
-    <!-- <img  width="300px" height="300px" src="image/img_basca1.jpg" alt=""> -->
-    <!-- <img  width="300px" height="300px" src="image/img_basca2.jpg" alt=""> -->
 </body>
 </html>
