--- a/hobbie03.html
+++ b/hobbie03.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Hobbie Academia</title>
 </head>
-<body>
+<body class="body3a">
+    <div style="text-align: center;">
+        <h1 class="h1a">Academia</h1>
+        </div>
     
+        <a class="a1f" href="hobbie01.html">Free Fire</a><br><br><br><br>
+        <a class="a2f" href="hobbie02.html">Basquete</a>
+
+    <div class="p1a">
+        <p>
+            A academia em um tempo se tornou um estilo de vida para mim. <br>
+            Os meus treinos eram pesados, por causa da minha estatura sempre tive uma força que eu não imaginava, so faltou o fisico, mas na força sempre consegui me garantir. <br>
+            Os dias de treino que eu mais gostava, eram os de peitos e perna.
+        </p>
+    </div>
+<div class="img1a">
+    <img width="300px" height="600px" src="image/img_academia.jpg" alt="">
+</div>
+
 </body>
 </html>
